# CHomP

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  install.sh
.install/: boost.sh  build.sh  cimg.sh  parse.sh
cmake-modules/: FindGMP.cmake
examples/: circle.mat  rubik.cub  segment.mat  simplex.simp  square.cub  squarewithhole.cub  torus.mat  torus.simp
include/boost/serialization/: readme  unordered_set.hpp
include/chomp/: Algebra.h  BitmapSubcomplex.h  Chain.h  Closure.h  Complex.h  ConleyIndex.h  CoreductionDecomposer.h  CubicalComplex.h  Decomposer.h  Draw.h  FiberComplex.h  Field.h  FrobeniusNormalForm.h  Generators.h  GraphComplex.h  HashIndexer.h  Matrix.h  MatrixComplex.h  MorseComplex.h  PolyRing.h  Preboundary.h  Prism.h  Real.h  Rect.h  RelativeComplex.h  RelativeMapHomology.h  RelativePair.h  Ring.h  SimplicialComplex.h  SmithNormalForm.h  SparseMatrix.h  Subcomplex.h  Toplex.h  ToplexDetail.h  VectorIndexer.h
source/: CMakeLists.txt  Makefile.am  Makefile.in  chomp-cubical.cpp  chomp-matrix.cpp  chomp-simplicial-z2.cpp  chomp-simplicial-z3.cpp  chomp-simplicial.cpp  config.h.in  greyscale-to-cubical.cpp
tests/: Makefile.am  Makefile.in  circle.test  greyscale_to_cubical.test  rubik.test  segment.test  simplex.test  square.test  square_relative.test  square_withhole.test
