
TESTS_ENVIRONMENT= bin=$(top_builddir)/source examples=$(top_srcdir)/examples

TESTS = square.test \
	square_withhole.test \
	square_relative.test \
	greyscale_to_cubical.test \
	rubik.test \
	simplex.test \
	segment.test \
	circle.test

XFAIL_TESTS = \
	greyscale_to_cubical.test

EXTRA_DIST = $(TESTS)
